<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_start">Puppies</string>
    <string name="app_name_mid">vs</string>
    <string name="app_name_end">Monsters</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Device is not supported</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">No camera access</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Missing license key</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid license key</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">No network transient</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network permanent</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">License key has been canceled</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Product type mismatch</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Unknown error</string>
    <string name="play">Play</string>
    <string name="quit">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="noti_title">Miss you already</string>
    <string name="noti_text">Comeback and fight those hideous monster!!!</string>
    <string name="how_to_play">How to play</string>
    <string name="step_1"><u><b>Step 1:</b></u> Place your camera in front of the target image to search for monsters.</string>
    <string name="step_2"><u><b>Step 2:</b></u> Try to remember the arrow sequence on the screen within the given time.</string>
    <string name="step_3"><u><b>Step 3:</b></u> Move the MetaWear or swipe the screen in the exact directions within the given time to defeat monsters.</string>
    <string name="note"><u><b>Note:</b></u> You can gain bonus health if a monster is defeated with 3 correct sequences. You will win if all monsters are defeated and you are still alive LOL…</string>
    <string name="setting_instruction">Enter your Metawear\'s MAC address</string>
    <string name="split">:</string>
    <string name="enable_remote_control">Enable remote control</string>
    <string name="setting_save_button">Save</string>
    <string name="setting_saved">Settings saved</string>
    <string name="initialize_remote_control">Initialize remote control…</string>
    <string name="initialize_light_sensor">Initialize light sensor…</string>
    <string name="toggle_light_sensor">Toggle light sensor</string>

</resources>
