<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <ImageView
        android:id="@+id/setting_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/configuration_gear_sketch"
        android:layout_gravity="top"
        android:contentDescription="@string/action_settings"/>

    <TextView
        android:id="@+id/appNameStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/app_name_start"
        android:textSize="50sp"
        android:textColor="@color/menu_textcolor"/>

    <TextView
        android:id="@+id/appNameMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name_mid"
        android:textSize="30sp"
        android:textColor="@color/menu_textcolor"/>

    <TextView
        android:id="@+id/appNameEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name_end"
        android:textSize="50sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/menu_textcolor"/>

    <Button
        android:id="@+id/playBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/play"
        android:textSize="@dimen/menu_btn_textsize"
        android:layout_marginBottom="20dp"
        android:textColor="@color/menu_textcolor"
        android:background="@drawable/menu_button"
        android:shadowColor="@color/menu_shadowcolor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:elevation="20dp"/>
    <Button
        android:id="@+id/howToPlayBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/how_to_play"
        android:textSize="@dimen/menu_btn_textsize"
        android:layout_marginBottom="20dp"
        android:textColor="@color/menu_textcolor"
        android:background="@drawable/menu_button"
        android:shadowColor="@color/menu_shadowcolor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:elevation="20dp"/>

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quit"
        android:textSize="@dimen/menu_btn_textsize"
        android:textColor="@color/menu_textcolor"
        android:background="@drawable/menu_button"
        android:shadowColor="@color/menu_shadowcolor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:elevation="20dp"/>

</LinearLayout>