<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/menu_bg_no_puppies" android:gravity="center">
    <TextView
        android:id="@+id/htp_step1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="40dp"
        android:textSize="@dimen/htp_textsize"
        android:textColor="@color/menu_textcolor"
        android:text="@string/step_1"/>
    <TextView
        android:id="@+id/htp_step2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="40dp"
        android:textSize="@dimen/htp_textsize"
        android:textColor="@color/menu_textcolor"
        android:text="@string/step_2"/>
    <TextView
        android:id="@+id/htp_step3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/htp_textsize"
        android:textColor="@color/menu_textcolor"
        android:text="@string/step_3"/>


</LinearLayout>