<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg_no_puppies"
    android:gravity="center">
    <CheckBox
        android:id="@+id/checkbox"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_remote_control"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        android:text="@string/setting_instruction"
        android:textColor="@color/menu_textcolor"
        android:textSize="30dp"/>

    <LinearLayout
        android:id="@+id/macAddInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:gravity="center">
        <EditText
            android:id="@+id/macAdd1"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/macAdd2"
            android:textColor="@color/menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textSize="@dimen/split_size"/>
        <EditText
            android:id="@+id/macAdd2"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/macAdd3"
            android:textColor="@color/menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textSize="@dimen/split_size"/>
        <EditText
            android:id="@+id/macAdd3"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/macAdd4"
            android:textColor="@color/menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textSize="@dimen/split_size"/>
        <EditText
            android:id="@+id/macAdd4"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/macAdd5"
            android:textColor="@color/menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textSize="@dimen/split_size"/>
        <EditText
            android:id="@+id/macAdd5"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/macAdd6"
            android:textColor="@color/menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textSize="@dimen/split_size"/>
        <EditText
            android:id="@+id/macAdd6"
            android:layout_width="@dimen/mac_address_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mac_address_text_size"
            android:maxLength="2"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:textColor="@color/menu_textcolor"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/setting_save_button"
        android:textSize="@dimen/menu_btn_textsize"
        android:background="@drawable/menu_button"/>

</LinearLayout>